name:            yesod-auth-ldap
version:         0.0.6
license:         BSD3
license-file:    LICENSE
author:          Michael Litchard, Axel Angel 
maintainer:      Michael Litchard 
synopsis:        LDAP Authentication for Yesod.
category:        Web, Yesod
stability:       experimental 
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
extra-source-files: include/qq.h
description:     LDAP Authentication for Yesod.

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4        
    build-depends:   LDAP                        
                   , bytestring                
                   , text                         
                   , shakespeare             
                   , yesod-form
                   , yesod-core 
                   , yesod-auth
                   , transformers                 
                   , authenticate-ldap        

    exposed-modules: Yesod.Auth.LDAP
    ghc-options:     -Wall
    include-dirs: include

source-repository head
  type:     git
  location: git://github.com:mlitchard/yesod-auth-ldap.git
